[package]
name = "memo_core"
version = "0.1.0"
authors = ["Antonio Scandurra <as-cii@github.com>", "Nathan Sobo <nathan@github.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.0"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
smallvec = "0.6.1"

[dev-dependencies]
futures-cpupool = "0.1"
rand = "0.3"
