[package]
name = "memo_js"
version = "0.1.0"
authors = ["Antonio Scandurra <as-cii@github.com>", "Nathan Sobo <nathan@github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.0"
futures = "0.1"
hex = "0.3"
js-sys = "0.3"
memo_core = { path = "../memo_core" }
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen-futures = "0.3"

[dependencies.wasm-bindgen]
version = "0.2.25"
features = ["serde-serialize"]
