[package]
name = "xray_core"
version = "0.1.0"
authors = ["Nathan Sobo <nathan@github.com>"]
license = "MIT"

[dependencies]
futures = "0.1"
lazy_static = "1.0"
parking_lot = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "0.6.0"

[dev-dependencies]
rand = "0.3"
futures-cpupool = "0.1"
tokio-core = "0.1"
